--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h2>Comentarios</h2>
                 <div class="utterances-container">
                     <script src="https://utteranc.es/client.js"
-                            repo="bravoxv/mi-pagina"
+                            repo="[TU_USUARIO_DE_GITHUB]/[TU_REPOSITORIO]"
                             issue-term="pathname"
                             crossorigin="anonymous"
                             async>
@@ -35,7 +35,7 @@
                         <button class="copy-cvu-button">Copiar CVU</button>
                         <span class="copy-message" id="astropay-copy-message"></span>
                     </div>
-                    <a href="https://link.mercadopago.com.ar/bravoxv" target="_blank" class="donation-option mercadopago-option">
+                    <a href="https://link.mercadopago.com.ar/icegaming" target="_blank" class="donation-option mercadopago-option">
                         Donar con Mercado Pago
                     </a>
                 </div>
@@ -50,12 +50,12 @@
         </header>
 
         <main class="links-section">
-            <a href="https://www.twitch.tv/bravoxv_" target="_blank" class="link-button twitch">Twitch</a>
-            <a href="https://www.youtube.com/tu-canal" target="_blank" class="link-button youtube">YouTube</a>
-            <a href="https://kick.com/bravoxv" target="_blank" class="link-button kick">Kick</a>
-            <a href="https://www.instagram.com/bravoxv2025/" target="_blank" class="link-button instagram">Instagram</a>
-            <a href="https://www.tiktok.com/@elbravoxv" target="_blank" class="link-button tiktok">TikTok</a>
-            <a href="https://discord.gg/NDJxRGQAaF" target="_blank" class="link-button discord">Discord</a>
+            <a href="https://www.twitch.tv/icegaming" target="_blank" class="link-button twitch">Twitch</a>
+            <a href="https://www.youtube.com/icegaming" target="_blank" class="link-button youtube">YouTube</a>
+            <a href="https://kick.com/icegaming" target="_blank" class="link-button kick">Kick</a>
+            <a href="https://www.instagram.com/icegaming" target="_blank" class="link-button instagram">Instagram</a>
+            <a href="https://www.tiktok.com/@icegaming" target="_blank" class="link-button tiktok">TikTok</a>
+            <a href="https://discord.gg/icegaming" target="_blank" class="link-button discord">Discord</a>
         </main>
 
         <footer>
