--- a/index.html
+++ b/index.html
@@ -3,50 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¡Conéctate con ICEGAMING! - Tus Redes y Streaming</title>
+    <title>ICEGAMING - Tus Redes Sociales</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="top-bar-buttons">
-        <div class="comment-container">
-            <button id="comment-button" class="comment-toggle-button">Comentar</button>
-            <div id="comments-section" class="comments-section">
-                <h2>Comentarios</h2>
-                <div class="utterances-container">
-                    <script src="https://utteranc.es/client.js"
-                            repo="[TU_USUARIO_DE_GITHUB]/[TU_REPOSITORIO]"
-                            issue-term="pathname"
-                            crossorigin="anonymous"
-                            async>
-                    </script>
-                </div>
-            </div>
-        </div>
-        <div class="donate-dropdown-container">
-            <div class="donate-dropdown">
-                <button id="donate-button" class="donate-corner-button">
-                    Donar <span class="arrow-down">▼</span>
-                </button>
-                <div class="dropdown-content" id="donate-options">
-                    <div class="donation-option astropay-option">
-                        <p>Copia mi CVU de AstroPay:</p>
-                        <span class="cvu-text" id="astropay-cvu">0000177500000007475928</span>
-                        <button class="copy-cvu-button">Copiar CVU</button>
-                        <span class="copy-message" id="astropay-copy-message"></span>
-                    </div>
-                    <a href="https://link.mercadopago.com.ar/icegaming" target="_blank" class="donation-option mercadopago-option">
-                        Donar con Mercado Pago
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="container">
         <header>
             <h1>¡Hola! Soy ICEGAMING</h1>
             <p>¡Bienvenido/a! Aquí encontrarás todos mis enlaces a redes sociales y canales de streaming.</p>
-            <button id="theme-toggle" class="theme-button">Cambiar a Tema Claro</button>
         </header>
 
         <main class="links-section">
@@ -62,7 +27,5 @@
             <p>© 2025 ICEGAMING. Todos los derechos reservados.</p>
         </footer>
     </div>
-    
-    <script src="script.js"></script>
 </body>
 </html>
