--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="snowflakes"></div>
+
     <div class="container">
         <header>
             <h1>¡Hola! Soy ICEGAMING</h1>
