--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
             <p>© 2025 ICEGAMING. Todos los derechos reservados.</p>
         </footer>
     </div>
+    
+    <script src="js/script.js"></script>
 </body>
 </html>
