--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="snowflakes"></div>
+    <div class="snowflakes" id="snowflakes-container"></div>
 
     <div class="container">
         <header>
@@ -29,7 +29,7 @@
             <p>© 2025 ICEGAMING. Todos los derechos reservados.</p>
         </footer>
     </div>
-    
+
     <script src="js/script.js"></script>
 </body>
 </html>
