--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICEGAMING - Tus Redes Sociales</title>
+    <title>BRAVO XV - Redes Sociales</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="snowflakes" id="snowflakes-container"></div>
+
+    <div class="snowflakes-container"></div>
 
     <div class="container">
         <header>
-            <h1>¡Hola! Soy ICEGAMING</h1>
-            <p>¡Bienvenido/a! Aquí encontrarás todos mis enlaces a redes sociales y canales de streaming.</p>
+            <h1>BRAVO XV</h1>
+            <p>¡Bienvenido! Aquí encontrarás todos mis enlaces a redes sociales y canales de streaming.</p>
         </header>
 
         <main class="links-section">
-            <a href="https://www.twitch.tv/icegaming" target="_blank" class="link-button twitch">Twitch</a>
-            <a href="https://www.youtube.com/icegaming" target="_blank" class="link-button youtube">YouTube</a>
-            <a href="https://kick.com/icegaming" target="_blank" class="link-button kick">Kick</a>
-            <a href="https://www.instagram.com/icegaming" target="_blank" class="link-button instagram">Instagram</a>
-            <a href="https://www.tiktok.com/@icegaming" target="_blank" class="link-button tiktok">TikTok</a>
-            <a href="https://discord.gg/icegaming" target="_blank" class="link-button discord">Discord</a>
+            <a href="https://www.twitch.tv/bravoxv" target="_blank" class="link-button twitch">Twitch</a>
+            <a href="https://www.youtube.com/bravoxv" target="_blank" class="link-button youtube">YouTube</a>
+            <a href="https://kick.com/bravoxv" target="_blank" class="link-button kick">Kick</a>
+            <a href="https://www.instagram.com/bravoxv" target="_blank" class="link-button instagram">Instagram</a>
+            <a href="https://www.tiktok.com/@bravoxv" target="_blank" class="link-button tiktok">TikTok</a>
+            <a href="https://discord.gg/bravoxv" target="_blank" class="link-button discord">Discord</a>
         </main>
 
         <footer>
-            <p>© 2025 ICEGAMING. Todos los derechos reservados.</p>
+            <p>© 2024 BRAVO XV. Todos los derechos reservados.</p>
         </footer>
     </div>
-
+    
     <script src="js/script.js"></script>
 </body>
 </html>
