--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICEGAMING - Redes Sociales</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-</head>
 <body>
 
-    <div class="snowflakes-container"></div>
+    <!-- Nieve detrás -->
+    <div class="snowflakes-container" id="snowBack"></div>
 
     <div class="container">
         <header>
@@ -30,7 +22,9 @@
             <p>© 2024 ICEGAMING. Todos los derechos reservados.</p>
         </footer>
     </div>
+
+    <!-- Nieve delante -->
+    <div class="snowflakes-container front" id="snowFront"></div>
     
     <script src="js/script.js"></script>
 </body>
-</html>
