--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>¡Conéctate conmigo! - ICEGAMING</title>
     <!-- Enlace a la fuente Montserrat -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Enlace a los estilos CSS -->
-    <link rel="stylesheet" href="style.css">
     <!-- Enlace a los iconos de Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <!-- Enlace a los estilos CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <!-- Contenedor para la nieve que va detrás de todo -->
     <div class="snowflakes-container" id="snowBack"></div>
 
+    <!-- Contenedor para los botones superiores (comentarios y donar) -->
     <div class="top-bar-buttons">
         <!-- Botón para mostrar/ocultar comentarios -->
         <button id="comment-button" class="comment-toggle-button">
@@ -45,7 +46,7 @@
     <!-- Contenedor principal del sitio -->
     <div class="container">
         <header>
-            <!-- Asegúrate de reemplazar "tu_foto_de_perfil.jpg" con la ruta correcta de tu imagen -->
+            <!-- Reemplaza "tu_foto_de_perfil.jpg" con la ruta correcta de tu imagen -->
             <img src="tu_foto_de_perfil.jpg" alt="Tu Foto de Perfil" class="profile-pic">
             <h1>ICEGAMING</h1>
             <p>¡Bienvenido! Aquí encontrarás todos mis enlaces a redes sociales y canales de streaming.</p>
@@ -74,7 +75,7 @@
     <!-- Contenedor para la nieve que va por delante de la UI -->
     <div class="snowflakes-container front" id="snowFront"></div>
     
-    <!-- Enlace al script principal. Asegúrate de que este archivo exista en la ruta 'js/script.js' -->
-    <script src="js/script.js"></script>
+    <!-- Enlace al script principal -->
+    <script src="script.js"></script>
 </body>
 </html>
