--- a/index.html
+++ b/index.html
@@ -17,31 +17,8 @@
     <!-- Contenedor para la nieve que va detrás de todo -->
     <div class="snowflakes-container" id="snowBack"></div>
 
-    <!-- Contenedor para los botones superiores (comentarios y donar) -->
+    <!-- Contenedor para los botones superiores, ahora vacio -->
     <div class="top-bar-buttons">
-        <!-- Botón para mostrar/ocultar comentarios -->
-        <button id="comment-button" class="comment-toggle-button">
-            Comentarios <i class="fas fa-comment-dots"></i>
-        </button>
-        <!-- Botón para donaciones con menú desplegable -->
-        <div class="donate-dropdown-container">
-            <div class="donate-dropdown">
-                <button id="donate-button" class="donate-corner-button">
-                    Donar <i class="fas fa-hand-holding-usd"></i> <span class="arrow-down">▼</span>
-                </button>
-                <div class="dropdown-content" id="donate-options">
-                    <div class="donation-option astropay-option">
-                        <p>Copia mi CVU de AstroPay:</p>
-                        <span class="cvu-text" id="astropay-cvu">0000177500000007475928</span>
-                        <button class="copy-cvu-button">Copiar CVU</button>
-                        <span class="copy-message" id="astropay-copy-message"></span>
-                    </div>
-                    <a href="https://link.mercadopago.com.ar/bravoxv" target="_blank" class="donation-option mercadopago-option">
-                        Donar con Mercado Pago
-                    </a>
-                </div>
-            </div>
-        </div>
     </div>
     
     <!-- Contenedor principal del sitio -->
@@ -66,11 +43,6 @@
             <p>© 2024 ICEGAMING. Todos los derechos reservados.</p>
         </footer>
 
-        <!-- Sección de comentarios oculta por defecto -->
-        <div id="comments-section" class="comments-section">
-            <h2>Comentarios</h2>
-            <div class="utterances-container"></div>
-        </div>
     </div>
 
     <!-- Contenedor para la nieve que va por delante de la UI -->
