--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <!-- Contenedor para la nieve que va por delante de la UI -->
     <div class="snowflakes-container front" id="snowFront"></div>
     
-    <!-- Enlace al archivo JavaScript en la carpeta 'js' -->
+    <!-- Enlace a los dos archivos JavaScript, uno para los copos de nieve y otro para el resto -->
+    <script src="js/snowflakes.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
