--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 </head>
 <body>
 
-    <!-- Contenedor para la nieve que va detrás de todo -->
-    <div class="snowflakes-container" id="snowBack"></div>
-
+    <!-- Los contenedores para la nieve ya no están en este archivo -->
+    
     <!-- Contenedor para los botones superiores, ahora vacio -->
     <div class="top-bar-buttons">
     </div>
@@ -45,10 +44,9 @@
 
     </div>
 
-    <!-- Contenedor para la nieve que va por delante de la UI -->
-    <div class="snowflakes-container front" id="snowFront"></div>
+    <!-- Los contenedores para la nieve ya no están en este archivo -->
     
-    <!-- Enlace a los dos archivos JavaScript, uno para los copos de nieve y otro para el resto -->
+    <!-- Enlace a los dos archivos JavaScript -->
     <script src="js/snowflakes.js"></script>
     <script src="js/script.js"></script>
 </body>
